Created a base navigation controller, create a home view controller to link all the button actions up. Added languages option for projects.

--- a/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
+++ b/Josh Bruce/Josh Bruce/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14E7f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="nvb-Af-6LF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14E7f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="x9L-cP-nEp">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -8,13 +8,18 @@
         <!--Navigation Controller-->
         <scene sceneID="aqo-go-Rk8">
             <objects>
-                <navigationController navigationBarHidden="YES" id="x9L-cP-nEp" sceneMemberID="viewController">
+                <navigationController navigationBarHidden="YES" id="x9L-cP-nEp" customClass="NavigationController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="VYz-Mn-OHx">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.36862745099999999" green="0.76078431369999999" blue="0.94117647059999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
-                        <segue destination="nvb-Af-6LF" kind="relationship" relationship="rootViewController" id="4aG-jL-cAw"/>
+                        <segue destination="Dxx-In-oQx" kind="relationship" relationship="rootViewController" id="Bo9-Rg-UGj"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VXO-j1-pDd" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -60,7 +65,7 @@
         <!--Home View Controller-->
         <scene sceneID="5La-xA-32X">
             <objects>
-                <viewController storyboardIdentifier="Home" title="Home View Controller" id="Dxx-In-oQx" customClass="BaseViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="Home" title="Home View Controller" id="Dxx-In-oQx" customClass="HomeViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ewx-1b-l5l"/>
                         <viewControllerLayoutGuide type="bottom" id="gUR-zz-55P"/>
@@ -95,6 +100,9 @@
                                 <state key="normal" image="swift-icon">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="showCategoryForSender:" destination="Dxx-In-oQx" eventType="touchUpInside" id="k4B-nt-uDW"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FAW-ax-ox4" customClass="CircleButton" customModule="Josh_Bruce" customModuleProvider="target">
                                 <rect key="frame" x="439" y="430" width="64" height="64"/>
@@ -106,6 +114,9 @@
                                 <state key="normal" image="work-icon">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="showCategoryForSender:" destination="Dxx-In-oQx" eventType="touchUpInside" id="JOa-BS-jS0"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xOS-jT-voJ" customClass="CircleButton" customModule="Josh_Bruce" customModuleProvider="target">
                                 <rect key="frame" x="97" y="430" width="64" height="64"/>
@@ -117,6 +128,9 @@
                                 <state key="normal" image="projects-icon">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="showCategoryForSender:" destination="Dxx-In-oQx" eventType="touchUpInside" id="e0Z-Hn-Nne"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Rx-lv-dLy" customClass="CircleButton" customModule="Josh_Bruce" customModuleProvider="target">
                                 <rect key="frame" x="268" y="516" width="64" height="64"/>
@@ -128,6 +142,9 @@
                                 <state key="normal" image="interests-icon">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="showCategoryForSender:" destination="Dxx-In-oQx" eventType="touchUpInside" id="ZNt-oI-BvI"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z1D-Np-7qD" customClass="CircleButton" customModule="Josh_Bruce" customModuleProvider="target">
                                 <rect key="frame" x="439" y="516" width="64" height="64"/>
@@ -182,7 +199,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <segue destination="mrx-Ze-toG" kind="show" id="xoD-vo-LVQ"/>
+                                    <action selector="showCategoryForSender:" destination="Dxx-In-oQx" eventType="touchUpInside" id="DHJ-zr-bW2"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -223,6 +240,14 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="UGo-ix-hst"/>
+                    <connections>
+                        <outlet property="educationButton" destination="Zyl-6S-mjZ" id="TTV-OJ-y8N"/>
+                        <outlet property="interestsButton" destination="0Rx-lv-dLy" id="Hjt-Z2-LOF"/>
+                        <outlet property="projectsButton" destination="xOS-jT-voJ" id="dIl-ZH-PDe"/>
+                        <outlet property="technicalSkillsButton" destination="RMZ-ZX-rsI" id="T5m-nR-juG"/>
+                        <outlet property="workButton" destination="FAW-ax-ox4" id="V4x-fC-js1"/>
+                        <segue destination="mrx-Ze-toG" kind="show" identifier="showCategoryType" id="t2D-Zx-suk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2TK-qH-0UQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -316,17 +341,17 @@
                         </connections>
                     </collectionView>
                     <connections>
-                        <segue destination="prg-qL-O5q" kind="presentation" identifier="showCategoryDetail" modalPresentationStyle="overCurrentContext" id="oXv-Oi-HeP"/>
+                        <segue destination="prg-qL-O5q" kind="presentation" identifier="showCategoryDetail" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="oXv-Oi-HeP"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7CM-Ej-Wiz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1886" y="1079"/>
+            <point key="canvasLocation" x="1886" y="1133"/>
         </scene>
         <!--Collection View Controller-->
         <scene sceneID="TRm-vV-Aw4">
             <objects>
-                <viewController title="Collection View Controller" modalPresentationStyle="overCurrentContext" id="prg-qL-O5q" sceneMemberID="viewController">
+                <viewController title="Collection View Controller" modalPresentationStyle="overCurrentContext" id="prg-qL-O5q" customClass="BaseViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="cC8-8G-c4H"/>
                         <viewControllerLayoutGuide type="bottom" id="8LX-4a-2an"/>
@@ -384,10 +409,10 @@
             </objects>
             <point key="canvasLocation" x="2559" y="408"/>
         </scene>
-        <!--Timeline View Controller-->
+        <!--Timeline-->
         <scene sceneID="3Jq-qi-O3L">
             <objects>
-                <tableViewController storyboardIdentifier="Timeline" title="Timeline View Controller" id="vlZ-1a-mgr" customClass="TimelineTableViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="Timeline" title="Timeline" id="vlZ-1a-mgr" customClass="TimelineTableViewController" customModule="Josh_Bruce" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="154" sectionHeaderHeight="22" sectionFooterHeight="22" id="LFh-57-VzT">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -604,4 +629,7 @@
         <image name="timeline-icon" width="26" height="26"/>
         <image name="work-icon" width="32" height="32"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="Bo9-Rg-UGj"/>
+    </inferredMetricsTieBreakers>
 </document>
